@@ -1,4 +1,8 @@
 release 1.0.1 (2008-11/12)
+- Fixed issue for null Pathsegment that occurred for a sub-resource locator as
+  follows:
+  @Path("{id}")
+  public SubResource(@PathParam("id") PathSegment id)
 - Fixed issue for a resource method that has the following annotations
   @POST
   @Consumes({"multipart/form-data", MediaType.APPLICATION_FORM_URLENCODED})
